feat: Add copy button to highlighted code lines

--- a/src/components/codeBlock/code-blocks.module.scss
+++ b/src/components/codeBlock/code-blocks.module.scss
@@ -75,7 +75,7 @@
   }
 
   :global(.highlight-line) {
-    background-color: rgba(239, 239, 239, 0.06);
+    // background-color: rgba(239, 239, 239, 0.06);
     /* Set highlight bg color */
     border-left: 4px solid var(--brandPink);
   }
